--- a/index.css
+++ b/index.css
@@ -778,7 +778,7 @@ form a {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #007bff;
+  background-color: grey;
   color: #fff;
   border: none;
   border-radius: 10px;
@@ -802,6 +802,7 @@ form a {
   .slideshow-container {
     position: relative;
     max-width: 100%;
+    margin-top: 100px;
     height: 450px; /* Set the desired height of the slideshow container */
   }
   
@@ -855,6 +856,15 @@ form a {
     margin-bottom: 10px;
   }
   
+  .contact-section input[type="name"],
+  .contact-section textarea {
+    width: 300px;
+    padding: 12px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
   .contact-section input[type="email"],
   .contact-section textarea {
     width: 300px;
@@ -897,3 +907,4 @@ form a {
     /* Other styles specific to mobile screens */
 }
 }
+
